--- a/BuberDinner.Domain/BuberDinner.Domain.csproj
+++ b/BuberDinner.Domain/BuberDinner.Domain.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="ErrorOr" Version="1.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="BillAggregate" />
+    <Folder Include="GuestAggregate" />
+  </ItemGroup>
+
 </Project>
