feat: create menus event

--- a/BuberDinner.Application/BuberDinner.Application.csproj
+++ b/BuberDinner.Application/BuberDinner.Application.csproj
@@ -17,4 +17,9 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Menus\Common" />
+    <Folder Include="Menus\Queries" />
+  </ItemGroup>
 </Project>
